# sortsmill-changelogger

./: .hgtags  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  git-log-processor.in  map-cmdline.sortsmill-changelog  sortsmill-changelogger.in.in  sortsmill-changelogger.m4  sortsmill-changeloggerize.in  sortsmill-changeloggerize.in.in  sortsmill-dist-changelog.am
m4/: stm_analyze_package_version.m4  stm_make_readme.m4  stm_path_progs_cached_and_precious.m4  stm_prog_perl.m4  stm_prog_sortsmill_changelogger.m4
